# zeekit

./: Cargo.toml  README.md
.github/workflows/: actions.yml
src/: config.rs  gadgets.rs  lib.rs  main.rs
src/common/: boolean.rs  groth16.rs  mod.rs  mux.rs  number.rs  plonk.rs  test.rs  uint.rs
src/common/groth16/: mod.rs  mux.rs  number.rs  test.rs  uint.rs  wrapped_lc.rs
src/eddsa/: curve.rs  gadget.rs  groth16.rs  mod.rs  plonk.rs  test.rs
src/merkle/: gadget.rs  groth16.rs  mod.rs  plonk.rs  test.rs
src/mimc/: groth16.rs  mod.rs  plonk.rs
src/poseidon/: README.md  constants.rs  generate_constants.py  groth16.rs  mod.rs  test.rs
src/reveal/: groth16.rs  mod.rs  test.rs
